update new gui and some features